syntax = "proto3";

package pb;



//The User service definition.
service User {
 rpc Register        (RegisterRequest       ) returns (RegisterReply       );
 rpc UserInfoById    (UserInfoByIdRequest   ) returns (UserInfoByIdReply   );
 rpc UserInfoByPhone (UserInfoByPhoneRequest) returns (UserInfoByPhoneReply);
}

message UserInfo {
     int64 Id=1;
     int64  Phone=2;
     string Password=3;
     int64 Age=4;
}


message RegisterRequest {
    UserInfo user =1;
}

message RegisterReply {
   UserInfo user=1;
}

message UserInfoByIdRequest {
   int64 id=1;
}

message UserInfoByIdReply {
    UserInfo user=1;
}

message UserInfoByPhoneRequest {
    int64 phone =1;
}

message UserInfoByPhoneReply {
   UserInfo user=1;
}

